modified:   index.html 	modified:   style/index.css 	modified:   style/index.scss 	renamed:    threejsModel/license.txt -> threejsModel/Pistol_and_Kukri/license.txt 	renamed:    threejsModel/scene.bin -> threejsModel/Pistol_and_Kukri/scene.bin 	renamed:    threejsModel/scene.gltf -> threejsModel/Pistol_and_Kukri/scene.gltf 	renamed:    threejsModel/textures/material_1_baseColor.png -> threejsModel/Pistol_and_Kukri/textures/material_1_baseColor.png 	renamed:    threejsModel/textures/material_1_emissive.png -> threejsModel/Pistol_and_Kukri/textures/material_1_emissive.png 	renamed:    threejsModel/textures/material_1_normal.png -> threejsModel/Pistol_and_Kukri/textures/material_1_normal.png 	renamed:    threejsModel/textures/material_baseColor.png -> threejsModel/Pistol_and_Kukri/textures/material_baseColor.png 	renamed:    threejsModel/textures/material_emissive.png -> threejsModel/Pistol_and_Kukri/textures/material_emissive.png 	renamed:    threejsModel/textures/material_normal.png -> threejsModel/Pistol_and_Kukri/textures/material_normal.png 	new file:   threejsModel/buster_drone/license.txt 	new file:   threejsModel/buster_drone/scene.bin 	new file:   threejsModel/buster_drone/scene.gltf 	new file:   threejsModel/buster_drone/textures/Boden_baseColor.png 	new file:   threejsModel/buster_drone/textures/Boden_metallicRoughness.png 	new file:   threejsModel/buster_drone/textures/Boden_normal.png 	new file:   threejsModel/buster_drone/textures/body_baseColor.png 	new file:   threejsModel/buster_drone/textures/body_emissive.png 	new file:   threejsModel/buster_drone/textures/body_metallicRoughness.png 	new file:   threejsModel/buster_drone/textures/body_normal.png 	new file:   threejsModel/buster_drone/textures/material_baseColor.png 	new file:   threejsModel/buster_drone/textures/material_metallicRoughness.png 	new file:   threejsModel/buster_drone/textures/material_normal.png 	new file:   threejsModel/scifi_motorcycle_project_mx_2/license.txt 	new file:   threejsMode

--- a/index.html
+++ b/index.html
@@ -56,9 +56,13 @@
             <p class="date" id="date">{{ date }}</p>
             <p class="time" id="time">{{ time }}</p>
         </div>
-        <model-viewer src="/threejsModel/scene.gltf" camera-controls auto-rotate enable-pan touch-action
-            rotation-per-second="135deg" auto-rotate-delay="500" interaction-prompt-style="wiggle">
-        </model-viewer>
+        <model-viewer src="/threejsModel/scifi_motorcycle_project_mx_2/scene.gltf" camera-controls auto-rotate enable-pan touch-action
+            rotation-per-second="90deg" auto-rotate-delay="500" interaction-prompt-style="wiggle"></model-viewer>
+        <!-- <div class="sketchfab-embed-wrapper"> <iframe title="Buster Drone" frameborder="0" allowfullscreen
+                mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking"
+                xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share
+                src="https://sketchfab.com/models/294e79652f494130ad2ab00a13fdbafd/embed?autospin=1&autostart=1&preload=1&ui_theme=dark">
+            </iframe> </div> -->
         <img src="/img/starsEx.webp" id="stars" alt="Spread out white star like figures to create ambience">
         <img src="/img/moon_1.webp" id="moon" alt="Moon is quite of the hallmark of the parallax design">
         <img src="/img/mountains_behind_1.webp" id="mountb" alt="Mountain range, associated to being the background">
