Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html
	modified:   js_basic/Emailsend.js
	modified:   js_basic/buttonalert.js
	modified:   style/index.css
	modified:   style/index.scss

--- a/index.html
+++ b/index.html
@@ -370,16 +370,17 @@
                 <h2>
                     Contact
                 </h2>
-                <div class="block" style="overflow: auto; pointer-events: auto; display: flex;">
-                    <div class="alert success-alert nodisplaynow" id="success">
-                        <h3>Success Alert Message</h3>
-                        <a class="close">&times;</a>
-                    </div>
+                <div class="alert success-alert nodisplaynow" id="success">
+                    <h3>Success!</h3>
+                    <a class="close">&times;</a>
+                </div>
 
-                    <div class="alert danger-alert nodisplaynow" id="failure">
-                        <h3>Danger Alert Message</h3>
-                        <a class="close">&times;</a>
-                    </div>
+                <div class="alert danger-alert nodisplaynow" id="failure">
+                    <h3>Try again!</h3>
+                    <a class="close">&times;</a>
+                </div>
+                <div class="block" style="overflow: auto; pointer-events: auto; display: flex;">
+
                     <form novalidate>
                         <div class="col-sm">
                             <div class="form-field">
