Changes to be committed: 	new file:   img/MEF_P1_img1.webp 	new file:   img/MEF_P1_img2.webp 	new file:   img/MEF_p2_img1.webp 	new file:   img/MEF_p2_img2.webp 	new file:   img/dsag_p2_img1.webp 	new file:   img/dsag_p2_img2.webp 	new file:   img/irp3_usp_img1.webp 	new file:   img/irp3_usp_img2.webp 	new file:   img/oopg_img1.webp 	new file:   img/oopg_img2.webp 	modified:   index.html 	modified:   js_basic/swiper.js 	modified:   style/index.css 	modified:   style/index.scss

--- a/index.html
+++ b/index.html
@@ -221,21 +221,194 @@
                 <div class="block" style="overflow: auto; pointer-events: auto; display: block;">
                     <div class="swiper mySwiper swiper-h">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide">Horizontal Slide 1</div>
                             <div class="swiper-slide">
                                 <div class="swiper mySwiper2 swiper-v">
                                     <div class="swiper-wrapper">
-                                        <div class="swiper-slide">Vertical Slide 1</div>
-                                        <div class="swiper-slide">Vertical Slide 2</div>
-                                        <div class="swiper-slide">Vertical Slide 3</div>
-                                        <div class="swiper-slide">Vertical Slide 4</div>
-                                        <div class="swiper-slide">Vertical Slide 5</div>
+                                        <div class="swiper-slide">
+                                            <p>Mechanical Engineering Fundementals <br> Project 1</p>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <p>
+                                                MEF introduces students to the study of external forces in two
+                                                dimensions and their effect on particles and
+                                                rigid bodies that are at rest. Students learn the skills to analyse the
+                                                forces acting on the bodies by drawing free-body
+                                                diagrams and applying the conditions of equilibrium. Topics include
+                                                forces and resultants, moments and couples,
+                                                equilibrium and the concepts of plane friction. This module also aims to
+                                                equip students with the skills to analyse
+                                                problems of rigid bodies in motion. Only linear motion in two dimensions
+                                                will be covered. Topics include kinematics and
+                                                kinetics of linear motion.
+                                            </p>
+                                        </div>
+                                        <div class="swiper-slide split">
+                                            <p>This project is aimed to allow students to apply knowledge and skills in
+                                                resolution of vectors and kinematics of linear motion to estimate the
+                                                horizontal distance travelled by a projectile. The process of creating
+                                                the model from scratch was a fun and made me better understand the
+                                                concept of motion.</p>
+                                            <img class="card-img imgzoom hori" src="/img/MEF_P1_img1.webp">
+                                        </div>
+                                        <div class="swiper-slide imgonly"><img class="card-img imgzoom hori"
+                                                src="/img/MEF_P1_img2.webp">
+                                        </div>
+                                        <div class="swiper-slide"><a
+                                                href="https://drive.google.com/file/d/1tyjh1illZ7_EFpr3mRam1NWgdCbJ9am1/view?usp=sharing">
+                                                <p>More information about project is provided here</p>
+                                            </a></div>
                                     </div>
                                     <div class="swiper-pagination swiper-pagination2"></div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">Horizontal Slide 3</div>
-                            <div class="swiper-slide">Horizontal Slide 4</div>
+                            <div class="swiper-slide">
+                                <div class="swiper mySwiper2 swiper-v">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <p>Mechanical Engineering Fundementals <br> Project 2</p>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <p>
+                                                MEF introduces students to the study of external forces in two
+                                                dimensions and their effect on particles and
+                                                rigid bodies that are at rest. Students learn the skills to analyse the
+                                                forces acting on the bodies by drawing free-body
+                                                diagrams and applying the conditions of equilibrium. Topics include
+                                                forces and resultants, moments and couples,
+                                                equilibrium and the concepts of plane friction. This module also aims to
+                                                equip students with the skills to analyse
+                                                problems of rigid bodies in motion. Only linear motion in two dimensions
+                                                will be covered. Topics include kinematics and
+                                                kinetics of linear motion.
+                                            </p>
+                                        </div>
+                                        <div class="swiper-slide split">
+                                            <p>
+                                                Project 2 of MEF aims to apply knowledge and skills in drawing of free
+                                                body diagrams, resolution of vectors and
+                                                moments and couples to analyse the throwing performance of the launching
+                                                arm and to
+                                                determine the best position to secure the rubber band onto the launching
+                                                arm.
+                                            </p>
+                                            <img src="/img/MEF_p2_img1.webp" class="card-img imgzoom vert">
+                                        </div>
+                                        <div class="swiper-slide imgonly"><img src="/img/MEF_p2_img2.webp"
+                                                class="imgzoom card-img vert"></div>
+                                        <div class="swiper-slide"><a
+                                                href="https://drive.google.com/file/d/1K_SIjiUWGYDMdCPPdSaCUUCm_6y5mWct/view?usp=sharing">
+                                                <p>More information about project is provided here</p>
+                                            </a></div>
+                                    </div>
+                                    <div class="swiper-pagination swiper-pagination2"></div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="swiper mySwiper2 swiper-v">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <p>Integrated Real-world 3 <br> Project 1</p>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <p>
+                                                IRP3 aims to integrate the knowledge learnt in the semester and
+                                                apply to a real-world project with service
+                                                learning as the main emphasis. Students will work in teams and deploy
+                                                their projects at service learning partners’
+                                                premises. On completion of the module, students will be able to apply
+                                                the skills and develop confidence in delivering
+                                                projects at the higher levels.
+                                            </p>
+                                        </div>
+                                        <div class="swiper-slide split">
+                                            <p>This project is aimed to allow students, explore the different problems
+                                                that exists in the society and come up with engineering based solutions,
+                                                in order to help them. It teaches the student to critical think and
+                                                understand what it takes to incubate ideas which is useful to the
+                                                general public.</p>
+                                            <img class="card-img imgzoom hori" src="/img/irp3_usp_img1.webp">
+                                        </div>
+                                        <div class="swiper-slide imgonly"><img class="card-img imgzoom vert"
+                                                src="/img/irp3_usp_img2.webp">
+                                        </div>
+                                        <div class="swiper-slide"><a
+                                                href="https://drive.google.com/file/d/1fo0fXmMvGsPrB-BP3uh71pD8JAP44z8K/view?usp=sharing">
+                                                <p>More information about project is provided here</p>
+                                            </a></div>
+                                    </div>
+                                    <div class="swiper-pagination swiper-pagination2"></div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="swiper mySwiper2 swiper-v">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <p>Object-Oriented Programming<br> Project 1</p>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <p>
+                                                OOPG introduces object-oriented programming to students who
+                                                already have a foundation in procedural programming.
+                                                It covers the fundamental concepts of object-oriented programming with
+                                                introduction to basic web and database
+                                                applications.
+                                            </p>
+                                        </div>
+                                        <div class="swiper-slide split">
+                                            <p>This project is aimed to allow students to familiarise themselves with
+                                                HyperText Markup Language and its related subsidiaries such as CSS and
+                                                Javascript to certain extend, through the use of ASP.Net MVC application
+                                                framework. Through this project, I truly learnt the capabilities of web
+                                                development and its design aspect in particular.</p>
+                                            <img class="card-img imgzoom vert" src="/img/oopg_img1.webp">
+                                        </div>
+                                        <div class="swiper-slide imgonly"><img class="card-img imgzoom vert"
+                                                src="/img/oopg_img2.webp">
+                                        </div>
+                                        <div class="swiper-slide"><a
+                                                href="https://ivid2.np.edu.sg/media/OOPG+Project/1_wgmxsjjk">
+                                                <p>More information about project is provided here</p>
+                                            </a></div>
+                                    </div>
+                                    <div class="swiper-pagination swiper-pagination2"></div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="swiper mySwiper2 swiper-v">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <p>Data Structures & Algorithms <br> Project 2</p>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <p>
+                                                DSAG focus is on algorithms, not user interface. Code
+                                                implementation platform is mainly C++. Basic data
+                                                structures covered in this module include array, linked-list, stack,
+                                                queue and binary search tree. For each of these
+                                                data structure, students learn to devise algorithms, where appropriate,
+                                                to add, to delete, to search or to sort data
+                                                etc. Brief introduction to encryption and hash coding concepts are
+                                                covered in advanced topics leading to an appreciation
+                                                of block-chain technology from software perspective.
+
+                                            </p>
+                                        </div>
+                                        <div class="swiper-slide split">
+                                            <p>This project is aimed to allow students to better understand the
+                                                programming behind a console based application, and also to discover
+                                                real world problems that are solvable through programming.</p>
+                                            <img class="card-img imgzoom hori" src="/img/dsag_p2_img1.webp">
+                                        </div>
+                                        <div class="swiper-slide imgonly"><img class="card-img imgzoom hori"
+                                                src="/img/dsag_p2_img2.webp">
+                                        </div>
+                                        <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=DS1IFvSwSkM">
+                                                <p>More information about project is provided here</p>
+                                            </a></div>
+                                    </div>
+                                    <div class="swiper-pagination swiper-pagination2"></div>
+                                </div>
+                            </div>
                         </div>
                         <div class="swiper-pagination"></div>
 
