Changes to be committed: 	modified:   index.html 	modified:   style/index.css 	modified:   style/index.scss

--- a/index.html
+++ b/index.html
@@ -432,17 +432,39 @@
                 <div class="block" style="overflow: auto; pointer-events: auto; display: block;">
                     <div class="swiper mySwiper3">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                hi
+                            <div class="swiper-slide spacearnd">
+                                <h2 style="font-size: 2.1vmax;">
+                                    Year 2018 - Year 2019
+                                </h2>
+                                <p> Sergeant Rank – NPCC<br>
+                                    ICAS Science – UNSW Global<br>
+                                    Marksmenship – NPCC<br>
+                                    Young Engineer Award (Sliver)
+
+                                </p>
                             </div>
-                            <div class="swiper-slide">
-                                hi
+                            <div class="swiper-slide spacearnd">
+                                <h2 style="font-size: 2.1vmax;">
+                                    Year 2016 - Year 2017
+                                </h2>
+                                <p>
+                                    Certification of Merit – NPCC Challenge Shield <br>
+                                    (Certificate, that remembers and appreciates<br>the achievements of NPCC
+                                    cadets.)<br>
+                                    Young Engineer Award (Bronze)<br>
+                                    Cadet of the Year – NPCC<br>
+                                    Australian Mathematics Competition – Australian Mathematics Trust
+                                </p>
                             </div>
-                            <div class="swiper-slide">
-                                hi
-                            </div>
-                            <div class="swiper-slide">
-                                hi
+                            <div class="swiper-slide spacearnd">
+                                <h2 style="font-size: 2.1vmax;">
+                                    Year 2012 - Year 2015
+                                </h2>
+                                <p>
+                                    ICAS Mathematics – UNSW Global <br>
+                                    ICAS Science – UNSW Global <br>
+                                    1st in Class – WGPS
+                                </p>
                             </div>
                         </div>
                         <div class="swiper-button-next-3"></div>
