--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <h2>
                     Projects
                 </h2>
-                <div class="block" style="overflow: auto; pointer-events: auto; display: block;">
+                <div class="block" style="overflow: hidden; pointer-events: auto; display: block;">
                     <div class="swiper mySwiper swiper-h">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
@@ -503,7 +503,6 @@
                             <!-- Tab content -->
                             <div class="wrapper_tabcontent">
                                 <div id="GLS" class="tabcontent active">
-                                    <h3>GLS</h3>
                                     <p>- Ad hoc working environment, with varying job intensity.<br />
                                         - Assigned and was able to shift products weighing about 20 kg
                                         occasionally.<br />
@@ -513,7 +512,6 @@
                                 </div>
 
                                 <div id="Redmart" class="tabcontent">
-                                    <h3>Redmart</h3>
                                     <p class="smol">- Maintaining inbound statistics and orders, ranging up to 30'000
                                         products in a
                                         single order.
@@ -533,7 +531,6 @@
                                 </div>
 
                                 <div id="Usher" class="tabcontent">
-                                    <h3>MBCC</h3>
                                     <p>-Basic ushering and crowd-control was practiced, with training.
                                         <br />
                                         -Checking-in and accounting for the passenger count were the main roles in this
@@ -543,7 +540,6 @@
                                 </div>
 
                                 <div id="STE" class="tabcontent">
-                                    <h3>STE</h3>
                                     <p>Working at ST Engineering is my first ever official Internship that I have gone
                                         to. From a structured school and education lifestyle, to an unstructured, and
                                         new environment, this internship gave me the opportunity to experience what it
