Animation Update, with mobile optimisation

--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@
             <p class="date" id="date">{{ date }}</p>
             <p class="time" id="time">{{ time }}</p>
         </div>
-        <model-viewer src="/threejsModel/Pistol_and_Kukri/scene.gltf" camera-controls auto-rotate touch-action
+        <!-- <model-viewer class="Right" src="/threejsModel/Pistol_and_Kukri/scene.gltf" camera-controls auto-rotate touch-action
             rotation-per-second="45deg" auto-rotate-delay="500" interaction-prompt-style="wiggle">
-        </model-viewer>
+        </model-viewer> -->
+        <div class="Right">
+            <img src="/img/Tri.svg">
+        </div>
         <img src="/img/starsEx.webp" id="stars" alt="Spread out white star like figures to create ambience">
         <img src="/img/moon_1.webp" id="moon" alt="Moon is quite of the hallmark of the parallax design">
         <img src="/img/mountains_behind_1.webp" id="mountb" alt="Mountain range, associated to being the background">
@@ -516,10 +519,7 @@
                                         products in a
                                         single order.
                                         <br />
-                                        - Interacting with the
-                                        supplier and maintaining remarkable buyer-supplier relationships.
-                                        <br />
-                                        - Quality and quantity checks on received products, rectifying any anomalies in
+                                        - Quality checks on received products, rectifying any anomalies in
                                         check, including but not limited to,
                                         short-expiry issues, overdelivered, partial delivery and incorrect data.
                                         <br />
