Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
 </div>
 <div class="swiper-slide split">
 <p>Project 2 of MEF aims to apply knowledge and skills in drawing of free body diagrams, resolution of vectors and moments and couples to analyse the throwing performance of the launching arm and to determine the best position to secure the rubber band onto the launching arm.</p><picture>
-<source data-srcset=img\MEF_P2_img1.webp><img alt="MEF project 2 → Image 1"class="lazyload imgzoom card-img vert"data-src=img\MEF_P2_img1.webp loading=lazy src=https://via.placeholder.com/100.webp/000/fff>
+<source data-srcset=img\MEF_p2_img1.webp><img alt="MEF project 2 → Image 1"class="lazyload imgzoom card-img vert"data-src=img\MEF_p2_img1.webp loading=lazy src=https://via.placeholder.com/100.webp/000/fff>
 </picture>
 </div>
 <div class="swiper-slide imgonly"><picture>
-<source data-srcset=img\MEF_P2_img2.webp><img alt="MEF project 2 → Image 2"class="lazyload imgzoom card-img vert"data-src=img\MEF_P2_img2.webp loading=lazy src=https://via.placeholder.com/100.webp/000/fff>
+<source data-srcset=img\MEF_p2_img2.webp><img alt="MEF project 2 → Image 2"class="lazyload imgzoom card-img vert"data-src=img\MEF_p2_img2.webp loading=lazy src=https://via.placeholder.com/100.webp/000/fff>
 </picture></div>
 <div class=swiper-slide><a href="https://drive.google.com/file/d/1K_SIjiUWGYDMdCPPdSaCUUCm_6y5mWct/view?usp=sharing">
 <p>More information about project is provided here</p>
