Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html
	modified:   style/minified.css

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 </picture>
 </div>
 <div class="swiper-slide imgonly"><picture>
-<source data-srcset=img\MEF_P1_img2.webp><img alt="MEF project 1 → Image 2"class="lazyload imgzoom card-img hori"data-src=img\MEF_P1_img2.webp loading=lazy src=https://via.placeholder.com/100.webp/000/fff>
+<source data-srcset=img\MEF_P1_img2.webp><img alt="MEF project 1 → Image 2"class="lazyload imgzoom card-img"data-src=img\MEF_P1_img2.webp loading=lazy src=https://via.placeholder.com/100.webp/000/fff>
 </picture></div>
 <div class=swiper-slide><a href="https://drive.google.com/file/d/1tyjh1illZ7_EFpr3mRam1NWgdCbJ9am1/view?usp=sharing">
 <p>More information about project is provided here</p>
@@ -247,7 +247,7 @@
 </picture>
 </div>
 <div class="swiper-slide imgonly"><picture>
-<source data-srcset=img\oopg_img2.webp><img alt="IRP unstructured project → Image 2"class="lazyload imgzoom card-img hori"data-src=img\oopg_img2.webp loading=lazy src=https://via.placeholder.com/100.webp/000/fff>
+<source data-srcset=img\oopg_img2.webp><img alt="IRP unstructured project → Image 2"class="lazyload imgzoom card-img" style="height: 31em; width: auto;"data-src=img\oopg_img2.webp loading=lazy src=https://via.placeholder.com/100.webp/000/fff>
 </picture></div>
 <div class=swiper-slide><a href=https://ivid2.np.edu.sg/media/OOPG+Project/1_wgmxsjjk>
 <p>More information about project is provided here</p>
